# racani

./: CMakeLists.txt  README.md
lab1/: BSpline.cpp  BSpline.h  CMakeLists.txt  ObjectLoader.cpp  ObjectLoader.h  dots.txt  main.cpp  splajn.txt  splajn2
lab2/: ObjectLoader.cpp  ObjectLoader.h  Particle.cpp  Particle.h  main.cpp
lab3/: Bone.cpp  Bone.h  CCDAlgorithm.cpp  CCDAlgorithm.h  Chain.cpp  Chain.h  helper.h  main.cpp
lab3/chains/: bone.txt
